--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,3 +27,13 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/my_style.css">
   </head>
+
+<body>
+  <div id="header">
+    <div id="head_nav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Tags</a></li>
+      </ul>
+    </div>
+  </div>
